Completed assignment modified index and style.css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="navbar">
         <a href="#">Gmail</a>
         <a href="#">Images</a>
+        
         <a href="#"><img src="apps_black_24dp.svg" alt="Products Icon"></a>
         <a href="#"><img src="account_circle_black_24dp.svg" alt="Account Icon"></a>
         
@@ -22,8 +23,7 @@
         </div>
         <div class="searchbar">
             <form action="/search" method="GET" role="search">
-            <div class="gooform">
-                <label for="search">Search</label>
+            <div class="searchform">
                 <input type="text" name="search" id="search" placeholder="">
             </div>
             </form>
